# ai-trainings

./: .gitignore  Makefile  README.md  pyproject.toml
ai_trainings/chatgpt_prompt_eng/a_guidelines/: take01.py  take02.py  take03.py  take04.py  take05.py  take06-model-limitations.py
ai_trainings/chatgpt_prompt_eng/b_iterative/: take01.py  take02.py
ai_trainings/chatgpt_prompt_eng/c_summarizing/: take01.py  take02.py
ai_trainings/chatgpt_prompt_eng/d_inferring/: take01.py  take02.py  take03.py  take04.py  take05.py  take06.py
ai_trainings/chatgpt_prompt_eng/e_translations/: take01.py  take02.py  take03.py
ai_trainings/chatgpt_prompt_eng/g_chatbot/: take01.py  take02.py
ai_trainings/dspy_experiments/entity_extraction/: main.py
ai_trainings/dspy_experiments/intapp/: main.py
ai_trainings/dspy_experiments/summarization/: dataset.jsonl  launcher.py  metric.py  program.py  summary_correctness.py
ml_trainings/: __init__.py  take01.py
ml_trainings/01guidelines/: take03.py  take04.py
ml_trainings/02iterative/: take01.py  take02.py
ml_trainings/03summarizing/: take02.py
ml_trainings/b_iterative/: take02.py
ml_trainings/c_summarizing/: take02.py
ml_trainings/chatgpt_prompt_eng/: __init__.py
ml_trainings/chatgpt_prompt_eng/a_guidelines/: take01.py  (+5 more)
ml_trainings/d_inferring/: take01.py  take02.py  take03.py  take04.py  take05.py  take06.py
ml_trainings/dspy_experiments/: breakdown.py  dataset.jsonl  metric.py  program.py
ml_trainings/guidelines/: take02.py  take04.py  take05.py  take06-model-limitations.py
ml_trainings/summarizing/: take01.py
(+19 files in other folders)
