[project]
name = "ml-trainings"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Romashov",email = "framebassman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (==0.27.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.0"

