[project]
name = "ai-trainings"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (==1.60.1)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "dspy (==2.5.43)",
    "dspy-ai (>=2.5.43,<3.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
summarization = "ml_trainings.dspy_experiments.summarization.program:start"
